// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzplWN hZMmsy"
>
  <li
    className="sc-fznyAO hoaMml"
    onClick={[Function]}
  >
    <span
      className="sc-fznBMq ihJrKo"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznyAO hoaMml"
    onClick={[Function]}
  >
    <span
      className="sc-fznBMq ihJrKo"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznyAO hoaMml"
    onClick={[Function]}
  >
    <span
      className="sc-fznBMq ihJrKo"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzplWN hZMmsy"
>
  <li
    className="sc-fznyAO gGNorl"
    onClick={[Function]}
  >
    <span
      className="sc-fznBMq ihJrKo"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznyAO gGNorl"
    onClick={[Function]}
  >
    <span
      className="sc-fznBMq ihJrKo"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznyAO gGNorl"
    onClick={[Function]}
  >
    <span
      className="sc-fznBMq ihJrKo"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
